Add .gitignore to exclude .pyc files and stage other changes

--- a/marketplace/templates/marketplace/item_list.html
+++ b/marketplace/templates/marketplace/item_list.html
@@ -139,7 +139,7 @@
                         <div class="card-details">
                             <h2 class="card-title">{{ item.title }}</h2>
                             <p class="card-category">Category: {{ item.category.name }}</p>
-                            <p class="card-price">Price: {{ item.price }}</p>
+                            <p class="card-price">Price: {{ item.selling_price }}</p>
                         </div>
                     </a>
                 </div>
