payment selling price updated

--- a/marketplace/templates/marketplace/process_payment.html
+++ b/marketplace/templates/marketplace/process_payment.html
@@ -8,7 +8,7 @@
 
     <div class="item-details">
         <h2>{{ item.title }}</h2>
-        <p>Price: {{ item.price }}</p>
+        <p>Price: {{ item.selling_price }}</p>
         {% if item.description %}
             <p>Description: {{ item.description }}</p>
         {% endif %}
